--- a/pdf-generator/pdf-generator.csproj
+++ b/pdf-generator/pdf-generator.csproj
@@ -9,23 +9,44 @@
     <PackageReference Include="Aspose.Words" Version="22.2.0" />
 
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
     <PackageReference Include="MediaTypeMap.Core" Version="2.3.3" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
 
+    <PackageReference Include="Aspose.Cells" Version="22.3.0" />
+    <PackageReference Include="Aspose.Slides.NET" Version="22.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Domain\Requests\" />
+    <None Remove="Domain\Responses\" />
+    <None Remove="Wrappers\" />
+    <None Remove="Handlers\" />
+    <None Remove="Domain\Exceptions\" />
+    <None Remove="Services\DocumentExtractionService\" />
+    <None Remove="Factories\" />
+    <None Remove="Aspose.Cells" />
+    <None Remove="Aspose.Slides.NET" />
+    <None Remove="Microsoft.Extensions.DependencyInjection" />
+    <None Remove="Microsoft.Extensions.Http" />
+    <None Remove="Microsoft.Extensions.DependencyInjection.Abstractions" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
-
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Requests\" />
+    <Folder Include="Domain\Responses\" />
+    <Folder Include="Wrappers\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Domain\Exceptions\" />
+    <Folder Include="Services\DocumentExtractionService\" />
+    <Folder Include="Factories\" />
+  </ItemGroup>
   <Target Name="CopyRequiredNativeAssets" AfterTargets="_FunctionsPostPublish">
     <ItemGroup>
       <NativeAssetToCopy Include="$(PublishDir)bin\runtimes\win-x86\native\libSkiaSharp.dll" />
