#12977 - add script to subsititute config on the server

--- a/visualiser/.env.production
+++ b/visualiser/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_COORDINATOR=https://fa-rumpole-pipeline-dev-coordinator.azurewebsites.net/api/cases/{caseId}?code=7cLs0nygkY/0ENJsJ2PNfOegtbok7ogqpjMjFA05E3pgeolrw2oNuA==&force={force}
-REACT_APP_SEARCH_INDEX=https://ss-rumpole-pipeline-dev.search.windows.net/indexes/lines-index/docs?api-version=2021-04-30-Preview&api-key=580F277B9BD253647E5618683F78F5C1&search=
+REACT_APP_COORDINATOR=--REACT_APP_COORDINATOR--
+REACT_APP_SEARCH_INDEX=--REACT_APP_SEARCH_INDEX--
