--- a/pdf-generator/pdf-generator.csproj
+++ b/pdf-generator/pdf-generator.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Aspose.Cells" Version="22.3.0" />
     <PackageReference Include="Aspose.Slides.NET" Version="22.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.17" />
+    <PackageReference Include="Aspose.Imaging" Version="22.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Domain\Requests\" />
@@ -26,6 +27,7 @@
     <None Remove="Services\DocumentExtractionService\" />
     <None Remove="Factories\" />
     <None Remove="Microsoft.Extensions.Http" />
+    <None Remove="Aspose.Imaging" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
