--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Functions\SubOrchestrators\" />
+    <None Remove="Domain\Requests\" />
+    <None Remove="Domain\Responses\" />
+    <None Remove="Domain\Tracker\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -23,5 +26,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Functions\SubOrchestrators\" />
+    <Folder Include="Domain\Requests\" />
+    <Folder Include="Domain\Responses\" />
+    <Folder Include="Domain\Tracker\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
