--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -8,12 +8,19 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
+    <PackageReference Include="GraphQL.Client" Version="4.0.2" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Functions\SubOrchestrators\" />
     <None Remove="Domain\Requests\" />
     <None Remove="Domain\Responses\" />
     <None Remove="Domain\Tracker\" />
+    <None Remove="Clients\" />
+    <None Remove="GraphQL.Client" />
+    <None Remove="Domain\CoreDataApi\" />
+    <None Remove="Factories\" />
+    <None Remove="Domain\Exceptions\" />
+    <None Remove="Handlers\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -29,6 +36,11 @@
     <Folder Include="Domain\Requests\" />
     <Folder Include="Domain\Responses\" />
     <Folder Include="Domain\Tracker\" />
+    <Folder Include="Clients\" />
+    <Folder Include="Domain\CoreDataApi\" />
+    <Folder Include="Factories\" />
+    <Folder Include="Domain\Exceptions\" />
+    <Folder Include="Handlers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
