--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
     <PackageReference Include="GraphQL.Client" Version="4.0.2" />
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="4.0.2" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Functions\SubOrchestrators\" />
@@ -21,6 +22,7 @@
     <None Remove="Factories\" />
     <None Remove="Domain\Exceptions\" />
     <None Remove="Handlers\" />
+    <None Remove="GraphQL.Client.Serializer.Newtonsoft" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
