--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -23,6 +23,7 @@
     <None Remove="Domain\Exceptions\" />
     <None Remove="Handlers\" />
     <None Remove="GraphQL.Client.Serializer.Newtonsoft" />
+    <None Remove="Functions\ActivityFunctions\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -43,6 +44,7 @@
     <Folder Include="Factories\" />
     <Folder Include="Domain\Exceptions\" />
     <Folder Include="Handlers\" />
+    <Folder Include="Functions\ActivityFunctions\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
