--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Wrappers\" />
     <None Remove="Newtonsoft.Json" />
+    <None Remove="Domain\" />
+    <None Remove="Domain\Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Wrappers\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Domain\Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
