--- a/pdf-generator.tests/pdf-generator.tests.csproj
+++ b/pdf-generator.tests/pdf-generator.tests.csproj
@@ -1,8 +1,48 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>pdf_generator.tests</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Factories\" />
+    <None Remove="Functions\" />
+    <None Remove="Handlers\" />
+    <None Remove="Services\" />
+    <None Remove="Services\BlobStorageService\" />
+    <None Remove="Services\DocumentExtractionService\" />
+    <None Remove="Services\PdfService\" />
+    <None Remove="Wrappers\" />
+    <None Remove="xunit" />
+    <None Remove="xunit.runner.visualstudio" />
+    <None Remove="Microsoft.NET.Test.Sdk" />
+    <None Remove="FluentAssertions" />
+    <None Remove="Moq" />
+    <None Remove="AutoFixture" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Factories\" />
+    <Folder Include="Functions\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Services\" />
+    <Folder Include="Services\BlobStorageService\" />
+    <Folder Include="Services\DocumentExtractionService\" />
+    <Folder Include="Services\PdfService\" />
+    <Folder Include="Wrappers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
+    <PackageReference Include="Moq" Version="4.17.2" />
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\pdf-generator\pdf-generator.csproj" />
+  </ItemGroup>
 </Project>
