--- a/pdf-generator/pdf-generator.csproj
+++ b/pdf-generator/pdf-generator.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>pdf_generator</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
@@ -20,6 +20,7 @@
     <PackageReference Include="Aspose.Diagram" Version="22.3.0" />
     <PackageReference Include="Aspose.PDF" Version="22.3.0" />
     <PackageReference Include="Aspose.Email" Version="22.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Domain\Requests\" />
@@ -35,6 +36,7 @@
     <None Remove="Aspose.HTML" />
     <None Remove="Aspose.PDF" />
     <None Remove="Aspose.Email" />
+    <None Remove="Microsoft.Extensions.Azure" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -54,6 +56,11 @@
     <Folder Include="Domain\Exceptions\" />
     <Folder Include="Services\DocumentExtractionService\" />
     <Folder Include="Factories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
   <Target Name="CopyRequiredNativeAssets" AfterTargets="_FunctionsPostPublish">
     <ItemGroup>
