--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>coordinator</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
     <PackageReference Include="GraphQL.Client" Version="4.0.2" />
     <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="4.0.2" />
   </ItemGroup>
@@ -24,6 +24,7 @@
     <None Remove="Handlers\" />
     <None Remove="GraphQL.Client.Serializer.Newtonsoft" />
     <None Remove="Functions\ActivityFunctions\" />
+    <None Remove="Domain\DocumentExtraction\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -45,6 +46,7 @@
     <Folder Include="Domain\Exceptions\" />
     <Folder Include="Handlers\" />
     <Folder Include="Functions\ActivityFunctions\" />
+    <Folder Include="Domain\DocumentExtraction\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
