--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="Azure.Identity" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Functions\SubOrchestrators\" />
@@ -25,6 +26,7 @@
     <None Remove="GraphQL.Client.Serializer.Newtonsoft" />
     <None Remove="Functions\ActivityFunctions\" />
     <None Remove="Domain\DocumentExtraction\" />
+    <None Remove="Azure.Identity" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
