--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -9,11 +9,13 @@
     <None Remove="Newtonsoft.Json" />
     <None Remove="Domain\" />
     <None Remove="Domain\Exceptions\" />
+    <None Remove="Handlers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Wrappers\" />
     <Folder Include="Domain\" />
     <Folder Include="Domain\Exceptions\" />
+    <Folder Include="Handlers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
