--- a/text-extractor.tests/text-extractor.tests.csproj
+++ b/text-extractor.tests/text-extractor.tests.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>text_extractor.tests</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,20 +17,24 @@
     <None Remove="AutoFixture" />
     <None Remove="Handlers\" />
     <None Remove="Functions\" />
+    <None Remove="Services\OcrService\" />
+    <None Remove="Services\SearchIndexService\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="Moq" Version="4.18.1" />
-    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Moq" Version="4.17.2" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="AutoFixture" Version="4.17.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Handlers\" />
     <Folder Include="Functions\" />
+    <Folder Include="Services\OcrService\" />
+    <Folder Include="Services\SearchIndexService\" />
   </ItemGroup>
 </Project>
