--- a/.github/workflows/rumpolepipeline-build.yml
+++ b/.github/workflows/rumpolepipeline-build.yml
@@ -18,6 +18,7 @@ jobs:
       coordinator: ${{ steps.filter.outputs.coordinator }}
       pdfgenerator: ${{ steps.filter.outputs.pdfgenerator }}
       textextractor: ${{ steps.filter.outputs.textextractor }}
+      runtests: ${{ steps.filter.outputs.coordinator }} || ${{ steps.filter.outputs.pdfgenerator }} || ${{ steps.filter.outputs.textextractor }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -54,14 +55,6 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build coordinator/coordinator.csproj --configuration Release --no-restore
-      - name: Run tests
-        run: dotnet test coordinator.tests/coordinator.tests.csproj --configuration Release /p:CollectCoverage=true /p:CoverletOutput=CoordinatorTestResults/ /p:CoverletOutputFormat=lcov
-      - name: Publish coverage report to coveralls.io
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coordinator.tests/CoordinatorTestResults/coverage.info
-        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
       - name: Publish
         run: dotnet publish coordinator/coordinator.csproj --configuration Release --output ${{ github.workspace }}/coordinator-drop
       - uses: actions/upload-artifact@v2
@@ -88,14 +81,6 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build pdf-generator/pdf-generator.csproj --configuration Release --no-restore
-      - name: Run tests
-        run: dotnet test pdf-generator.tests/pdf-generator.tests.csproj --configuration Release /p:CollectCoverage=true /p:CoverletOutput=PdfGeneratorTestResults/ /p:CoverletOutputFormat=lcov
-      - name: Publish coverage report to coveralls.io
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: pdf-generator.tests/PdfGeneratorTestResults/coverage.info
-        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
       - name: Publish
         run: dotnet publish pdf-generator/pdf-generator.csproj --configuration Release --output ${{ github.workspace }}/pdf-generator-drop
       - uses: actions/upload-artifact@v2
@@ -122,17 +107,34 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build text-extractor/text-extractor.csproj --configuration Release --no-restore
-      - name: Run tests
-        run: dotnet test text-extractor.tests/text-extractor.tests.csproj --configuration Release /p:CollectCoverage=true /p:CoverletOutput=TextExtractorTestResults/ /p:CoverletOutputFormat=lcov
-      - name: Publish coverage report to coveralls.io
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: text-extractor.tests/TextExtractorTestResults/coverage.info
-        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
       - name: Publish
         run: dotnet publish text-extractor/text-extractor.csproj --configuration Release --output ${{ github.workspace }}/text-extractor-drop
       - uses: actions/upload-artifact@v2
         with:
           path: ${{ github.workspace }}/text-extractor-drop
           name: text-extractor-drop
+
+  runtests:
+    needs: changes
+    if: ${{ needs.changes.outputs.runtests == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with: 
+          # Make sure the actual branch is checked out when running on pull requests
+          ref: ${{ github.head_ref }}
+      - name: Use .NET Core sdk
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Run tests
+        run: dotnet test rumpolepipeline.tests/rumpolepipeline.tests.csproj --configuration Release /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
+      - name: Publish coverage report to coveralls.io
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: rumpolepipeline.tests/TestResults/coverage.info
+        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
