Altered csproj files to avoid aggressively removing dependencies it mistakenly deems unnecessary from the build output. Corrected dependency injection typo in coordinator start up.

--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>coordinator</RootNamespace>
+    <_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
