--- a/pdf-generator.tests/pdf-generator.tests.csproj
+++ b/pdf-generator.tests/pdf-generator.tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>pdf_generator.tests</RootNamespace>
+    <_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>
   </PropertyGroup>
 
   <ItemGroup>
