--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
-  ]
+  ],
+  "ignoreDeps": ["Aspose.Cells", "Aspose.Diagram", "Aspose.Email", "Aspose.Imaging", "Aspose.PDF", "Aspose.Slides.NET", "Aspose.Words"]
 }
