--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -17,8 +17,10 @@
     <Folder Include="Handlers\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="FluentValidation" Version="11.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.17" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.47.1" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="6.23.0" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.23.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
