--- a/coordinator.tests/coordinator.tests.csproj
+++ b/coordinator.tests/coordinator.tests.csproj
@@ -24,7 +24,6 @@
     <Folder Include="Functions\" />
     <Folder Include="Functions\ActivityFunctions\" />
     <Folder Include="Functions\SubOrchestrators\" />
-    <Folder Include="Handlers\" />
     <Folder Include="Domain\" />
     <Folder Include="Domain\Tracker\" />
   </ItemGroup>
@@ -33,6 +32,7 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="coverlet.msbuild" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
