--- a/coordinator/coordinator.csproj
+++ b/coordinator/coordinator.csproj
@@ -9,6 +9,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.7.0" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="6.23.0" />
@@ -48,7 +49,6 @@
     <Folder Include="Clients\" />
     <Folder Include="Factories\" />
     <Folder Include="Domain\Exceptions\" />
-    <Folder Include="Handlers\" />
     <Folder Include="Functions\ActivityFunctions\" />
     <Folder Include="Domain\DocumentExtraction\" />
   </ItemGroup>
