--- a/pdf-generator.tests/pdf-generator.tests.csproj
+++ b/pdf-generator.tests/pdf-generator.tests.csproj
@@ -40,6 +40,7 @@
     <Folder Include="Wrappers\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="coverlet.msbuild" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
