--- a/pdf-generator/pdf-generator.csproj
+++ b/pdf-generator/pdf-generator.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
 
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
+
     <PackageReference Include="Aspose.Words" Version="22.2.0" />
 
     <PackageReference Include="FluentValidation" Version="11.2.0" />
