--- a/text-extractor.tests/text-extractor.tests.csproj
+++ b/text-extractor.tests/text-extractor.tests.csproj
@@ -19,6 +19,7 @@
     <None Remove="Functions\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="coverlet.msbuild" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
