feature/15415 - updated Aspose temp licence. Added possible document conversion options when redacting. If the document format version is less than 1.7 and a numbered version then it attempts to convert the redacted document to 1.7 before saving to blob storage

--- a/pdf-generator/pdf-generator.csproj
+++ b/pdf-generator/pdf-generator.csproj
@@ -52,7 +52,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
    </None>
     <None Update="Aspose.Total.NET.lic">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
