Created a search service of the existing index for document evaluation of document metadata retrieved from CMS, moving away from tags because of restrictive permissions and additional, unnecessary costs

--- a/Common.tests/Common.tests.csproj
+++ b/Common.tests/Common.tests.csproj
@@ -36,4 +36,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
 </Project>
