--- a/document-evaluator.tests/document-evaluator.tests.csproj
+++ b/document-evaluator.tests/document-evaluator.tests.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\document-evaluator\document-evaluator.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Functions" />
+    </ItemGroup>
+
 </Project>
