--- a/document-evaluator/document-evaluator.csproj
+++ b/document-evaluator/document-evaluator.csproj
@@ -2,10 +2,12 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <AzureFunctionsVersion>V4</AzureFunctionsVersion>
-        <RootNamespace>document_evaluation</RootNamespace>
+        <RootNamespace>document_evaluator</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage.Queues" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Azure" Version="1.2.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     </ItemGroup>
