--- a/document-evaluator.tests/document-evaluator.tests.csproj
+++ b/document-evaluator.tests/document-evaluator.tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoFixture" Version="4.17.0" />
+        <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="Moq" Version="4.18.2" />
@@ -28,10 +29,6 @@
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\document-evaluator\document-evaluator.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Functions" />
     </ItemGroup>
 
 </Project>
